# Titan

./: .clangd  .gitignore  CMakeLists.txt
.idx/: airules.md  dev.nix
Docs/: CurrentStatus.md  Working.md
Source/Titan/: Main.cpp
Source/Titan/AST/: ASTFieldNode.h  ASTStructNode.h  AstNode.h
Source/Titan/Language/: Keywords.cpp  Keywords.h
Source/Titan/Lexer/: Lexer.cpp  Lexer.h  Token.h
Source/Titan/Parser/: Parser.cpp  Parser.h
Source/Titan/Tests/: LexerTests.cpp  ParserTests.cpp  TestRunner.cpp  TestRunner.h
